:lipstick: Fix: adjust background and text color for dark mode

--- a/themes/PaperMod/assets/css/common/main.css
+++ b/themes/PaperMod/assets/css/common/main.css
@@ -83,6 +83,5 @@ pre:hover .copy-code {
 }
 
 strong {
-    font-weight: 400;
     color: var(--red);
 }
