--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -25,12 +25,12 @@
 }
 
 .dark {
-    --theme: rgb(29, 30, 32);
+    --theme: rgb(12 14 22);
     --entry: rgb(46, 46, 51);
     --primary: rgb(218, 218, 219);
     --secondary: rgb(155, 156, 157);
     --tertiary: rgb(65, 66, 68);
-    --content: rgb(196, 196, 197);
+    --content: rgb(214, 211, 209);
     --hilite: rgb(245 245 245);
     --code-block-bg: rgb(46, 46, 51);
     --code-bg: rgb(55, 56, 62);
